--- a/web/saito/css-imports/saito-chat.css
+++ b/web/saito/css-imports/saito-chat.css
@@ -869,6 +869,7 @@
     max-height: -webkit-fill-available;
     max-width: -webkit-fill-available;
     z-index: 15;
+    border-radius: unset;
   }
 
   .chat-manager-overlay .chat-manager {
