--- a/web/saito/css-imports/saito-post.css
+++ b/web/saito/css-imports/saito-post.css
@@ -95,6 +95,9 @@
   height: auto;
   object-fit: contain;
   max-height: 6rem;
+  border: 1px solid var(--saito-primary);
+  border-radius: var(--saito-border-radius);
+  overflow: hidden;
 }
 
 .post-tweet-img-preview i{
