--- a/web/saito/css-imports/saito-chat.css
+++ b/web/saito/css-imports/saito-chat.css
@@ -183,7 +183,7 @@
   max-height: 100vh;
   min-width: 30rem;
   min-height: 20rem;
-  box-shadow: var(--shadow-chat-popup);
+  box-shadow: var(--shadow-draggable-popup);
 
   /*
   making overflow hiddent for saito mention list
