--- a/web/saito/css-imports/saito-fileshare.css
+++ b/web/saito/css-imports/saito-fileshare.css
@@ -11,14 +11,16 @@
   /* pseudo overlay */
   max-height: calc(100 * var(--saito-vh));
   max-width: 100vw;
-  box-shadow: var(--shadow-overlay);
+  box-shadow: var(--shadow-draggable-popup);
   border-radius: var(--border-radius-modal-menu);
-  background-color: var(--background-color-overlay-menu); 
+  overflow: hidden;
+  background-color: var(--background-color-chat-popup-header);
+  border: var(--border-thickness-chat-popup) solid var(--border-color-chat-popup); 
   position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  z-index: 500;
+  z-index: 50;
 }
 
 #cancel-transfer{
