more css cleanup

--- a/web/saito/css-imports/saito-calendar.css
+++ b/web/saito/css-imports/saito-calendar.css
@@ -151,6 +151,8 @@
     width: 100%;
     text-align: center;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .saito-calendar-day-date {
