--- a/web/saito/css-imports/saito-fileshare.css
+++ b/web/saito/css-imports/saito-fileshare.css
@@ -17,9 +17,11 @@
   background-color: var(--background-color-chat-popup-header);
   border: var(--border-thickness-chat-popup) solid var(--border-color-chat-popup); 
   position: fixed;
-  left: 50%;
+  /*left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);*/
+  left: 0;
+  bottom: 0;
   z-index: 50;
 }
 
@@ -29,17 +31,17 @@
 
 .pseudo-overlay-controls {
   position: absolute;
-  top: 0.25rem;
-  right: 0.25rem;
-  width: 5rem;
+  top: 0;
+  right: 0;
+  width: 6rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 .pseudo-overlay-controls .icon-button {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2.75rem;
+  height: 2.75rem;
   display: flex;
   justify-content: center;
   align-items: center;
