--- a/web/saito/css-imports/saito-header.css
+++ b/web/saito/css-imports/saito-header.css
@@ -12,7 +12,7 @@
   left: 0;
   z-index: 15;
   height: var(--saito-header-height);
-  /*transition: all 0.33s linear;*/
+  transition: top 0.33s linear, height 0.33s linear, padding 0.33s linear;
 }
 
 #saito-header.wide-screen {
