--- a/mods/vote/web/css/vote-layout.css
+++ b/mods/vote/web/css/vote-layout.css
@@ -72,15 +72,24 @@
 
 .tab-button {
   padding: 8px 16px;
-  border: 1px solid var(--saito-border-color);
   border-radius: 6px;
   cursor: pointer;
   transition: all 0.2s;
-  margin-bottom: 2.4rem
+  margin-bottom: 1.5rem;
+  border: none;
+  box-shadow: none;
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
 }
 
+.tab-button svg {
+  margin-right: .5rem;
+}
 .tab-button:hover {
-  background: #f3f4f6;
+  background: var(--saito-primary) !important;
+  box-shadow: var(--saito-box-shadow);
+  border: none;
 }
 
 .tab-button.active {
