crypto staking and wuziqi fixes

--- a/web/saito/css-imports/game-playerbox.css
+++ b/web/saito/css-imports/game-playerbox.css
@@ -71,6 +71,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .game-playerbox-head .saito-user>.saito-userline .player-stake {
