--- a/mods/atr/web/css/atr-base.css
+++ b/mods/atr/web/css/atr-base.css
@@ -136,11 +136,15 @@
     }
 
     .data-table tr.total_supply_value {
-        background-color: #dddddd;
+        background-color: #FDEED5;
+    }
+
+    .data-table tr.payout_value {
+        background-color: #e0ebf0b0;
     }
 
     .data-table tr.total_supply.total_supply_value {
-        background-color: #aaa;
+        background-color: #d8c3a2;
     }
 
     .data-table td {
