--- a/mods/videocall/web/css/videocall-video-interface.css
+++ b/mods/videocall/web/css/videocall-video-interface.css
@@ -82,13 +82,15 @@
 	resize: both;
 	cursor: grab;
 	border-radius: 0.5rem;
-	max-width: 100%;
+/*	max-width: 100%;
 	max-height: 50vh;
-}
+*/}
 
 .stun-overlay-container.minimize .stun-chatbox main {
+	/*
 	grid-template-rows: calc(100% - 40px) 40px;
 	grid-template-columns: minmax(5rem, 1fr);
+	*/
 }
 
 .minimize .stun-chatbox .minimizer i {
@@ -96,11 +98,11 @@
 }
 
 .minimize .stun-chatbox .video-container-large {
-	padding: 0.25rem;
+/*	padding: 0.25rem;
 	gap: 0;
 	grid-template-columns: 0 1fr;
 	grid-template-rows: minmax(0, 1fr);
-}
+*/}
 
 .minimize .stun-chatbox .expanded-video {
 	width: 100%;
