--- a/mods/limbo/web/css/limbo-base.css
+++ b/mods/limbo/web/css/limbo-base.css
@@ -341,13 +341,15 @@
 
 
 .default-limbo-image-mask {
-	position: relative;
+	position: absolute;
+	z-index: 5;
 	width: 25rem;
 	height: 25rem;
 	overflow: hidden;
 	top: 50%;
+	left: 50%;
 	margin: 1rem auto;
-	transform: translateY(-55%);
+	transform: translate(-50%, -55%);
 	border-radius: 62%;
 	border: 1px solid var(--color-primary);
 	background-image: url('/swarmcast/img/inception.gif');
