--- a/mods/videocall/web/css/videocall-video-interface.css
+++ b/mods/videocall/web/css/videocall-video-interface.css
@@ -81,7 +81,7 @@
 	overflow: auto;
 	resize: both;
 	cursor: grab;
-	border-radius: 0.5rem;
+	border-radius: var(--saito-border-radius);;
 	max-width: 100%;
 	max-height: 50vh;
 }
@@ -98,13 +98,20 @@
 .minimize .stun-chatbox .video-container-large {
 	padding: 0.25rem;
 	gap: 0;
-	grid-template-columns: 0 1fr;
-	grid-template-rows: minmax(0, 1fr);
+	grid-template-columns: minmax(0px, 1fr);
+	grid-template-rows: minmax(0px, 1fr);
+	border-radius: var(--border-radius-round);
 }
 
-.min-gallery .stun-chatbox .video-container-large {
-	grid-template-columns: minmax(0px, 1fr);
+
+
+.minimize .stun-chatbox .video-container-large.split-view .side-videos {
+	position: absolute;
+	top: 7px;
+	right: 7px;
+	width: 25%;
 }
+
 
 .minimize .stun-chatbox .expanded-video {
 	width: 100%;
@@ -112,14 +119,6 @@
 	resize: unset;
 }
 
-/* .stun-chatbox.minimize .side-videos {
-	display: flex;
-	flex-direction: column;
-	gap: 0.5rem;
-	resize: unset;
-	max-height: 100%;
-	overflow-y: auto;
-} */
 
 .minimize .stun-chatbox .control-panel {
 	padding: 0.25rem;
@@ -185,13 +184,6 @@
 	flex-wrap: wrap;
 }
 
-/* .gallery {
-	grid-template-columns: repeat(auto-fit, minmax(48%, 1fr));
-	grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-	height: fit-content;
-	width: 100%;
-	max-height: 100%;
-} */
 
 .gallery-view {
 	grid-template-columns: minmax(0px, 1fr);
@@ -221,7 +213,7 @@
   box-sizing: border-box;
   gap: 1rem;
   transition: all 0.5s ease;
-  display: flex !important;
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
@@ -315,8 +307,10 @@
 
 .stun-chatbox .video-box-container-large {
 	border: 2px solid var(--saito-border-color-dark);
-	border-radius: 0.5rem;
+	border-radius: var(--saito-border-radius);
+	position: relative;
 	cursor: pointer;
+	overflow: hidden;
 }
 
 .presentation {
@@ -342,16 +336,6 @@
 	height: fit-content;
 	border: 2px solid var(--saito-border-color-dark);
 }
-
-/* .side-videos .video-box-container-large {
-	max-height: 50%;
-} */
-
-.stun-chatbox .video-box-container-large {
-	border-radius: 0.5rem;
-	position: relative;
-}
-
 
 
 @keyframes fade-in {
@@ -478,7 +462,7 @@ video#local {
 	object-fit: cover;
 	max-height: 85vh;
 	z-index: 2;
-	border-radius: 0.1rem;
+	border-radius: inherit;
 	border: none;
 }
 
@@ -1160,12 +1144,6 @@ video#presentation {
 		margin-right: 0.5rem;
 	}
 
-    /*.gallery, .side-videos {
-    width: 100%;
-    grid-template-rows: unset;
-    grid-template-columns: repeat(auto-fit, minmax(100px, auto));
-    grid-gap: 0.5rem; 
-    }*/
   
   /* .video-box-container-large video {
     height: 100%;
